--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -2,6 +2,7 @@
   "@@locale": "fr",
   "appTitle": "Kineo",
   "selectTraining": "Veuillez sélectionner l'entraînement que vous souhaitez effectuer",
+  "clickToStartTest": "Cliquez pour commencer le test",
   "tremorTest": "Test de Tremblement de Main",
   "tremorTestTitle": "Test de Tremblement de Main",
   "tremorTestInstruction": "Veuillez tenir le téléphone dans votre main et garder le bras immobile pendant 30 secondes",
@@ -165,5 +166,35 @@
   "avatarUpdateFailed": "Échec de la mise à jour de l'avatar",
   "@avatarUpdateFailed": {
     "description": "Avatar update failure message"
-  }
+  },
+  "voiceTraining": "Entraînement Vocal",
+  "voiceTrainingMainInstruction": "Veuillez maintenir un son long — Ah —",
+  "voiceTrainingInstruction": "Basé sur les principes de la thérapie LSVT LOUD, veuillez parler fort. La taille du cercle changera en temps réel selon votre volume. Lorsqu'il atteint 75-85 dB, le cercle deviendra vert.",
+  "voiceTrainingReady": "Prêt à commencer",
+  "voiceTrainingTooQuiet": "Parlez plus fort !",
+  "voiceTrainingKeepGoing": "Bien, continuez !",
+  "voiceTrainingExcellent": "Excellent ! Maintenez !",
+  "voiceTrainingTarget": "Objectif : {target} dB",
+  "voiceTrainingTargetRange": "Objectif : {range} dB",
+  "@voiceTrainingTargetRange": {
+    "placeholders": {
+      "range": {
+        "type": "String"
+      }
+    }
+  },
+  "@voiceTrainingTarget": {
+    "placeholders": {
+      "target": {
+        "type": "String"
+      }
+    }
+  },
+  "startListening": "Démarrer l'Entraînement",
+  "stopListening": "Arrêter l'Entraînement",
+  "microphonePermissionRequired": "Autorisation du Microphone Requise",
+  "microphonePermissionDenied": "Autorisation du microphone refusée",
+  "microphonePermissionDeniedMessage": "L'autorisation du microphone a été refusée de façon permanente. Veuillez activer l'autorisation du microphone dans les paramètres système pour utiliser l'entraînement vocal.",
+  "microphoneError": "Erreur du microphone",
+  "openSettings": "Ouvrir les Paramètres"
 }
