--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -2,6 +2,7 @@
   "@@locale": "ja",
   "appTitle": "Kineo",
   "selectTraining": "実施したいトレーニングを選択してください",
+  "clickToStartTest": "クリックしてテストを開始",
   "tremorTest": "手の震えテスト",
   "tremorTestTitle": "手の震えテスト",
   "tremorTestInstruction": "スマートフォンを手に持ち、30秒間腕を静止させてください",
@@ -165,5 +166,35 @@
   "avatarUpdateFailed": "アバターの更新に失敗しました",
   "@avatarUpdateFailed": {
     "description": "Avatar update failure message"
-  }
+  },
+  "voiceTraining": "音声訓練",
+  "voiceTrainingMainInstruction": "長い音を続けて発音してください —— あ ——",
+  "voiceTrainingInstruction": "LSVT LOUD療法の原則に基づき、大きな声で話してください。円のサイズは音量に応じてリアルタイムで変化します。75-85 dBに達すると、円が緑色になります。",
+  "voiceTrainingReady": "準備完了",
+  "voiceTrainingTooQuiet": "もっと大きな声で！",
+  "voiceTrainingKeepGoing": "いいですね、続けてください！",
+  "voiceTrainingExcellent": "素晴らしい！その調子！",
+  "voiceTrainingTarget": "目標: {target} dB",
+  "voiceTrainingTargetRange": "目標: {range} dB",
+  "@voiceTrainingTargetRange": {
+    "placeholders": {
+      "range": {
+        "type": "String"
+      }
+    }
+  },
+  "@voiceTrainingTarget": {
+    "placeholders": {
+      "target": {
+        "type": "String"
+      }
+    }
+  },
+  "startListening": "訓練を開始",
+  "stopListening": "訓練を停止",
+  "microphonePermissionRequired": "マイクの許可が必要です",
+  "microphonePermissionDenied": "マイクの許可が拒否されました",
+  "microphonePermissionDeniedMessage": "マイクの許可が永続的に拒否されました。音声訓練を使用するには、システム設定でマイクの許可を有効にしてください。",
+  "microphoneError": "マイクエラー",
+  "openSettings": "設定を開く"
 }
